Fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 body {
-
+   height: 140vmin;
    width: 100vmax;
    display: flex;
    justify-content: center;
